# Nexus

./: .gitignore  Cargo.toml  NEXUS_CODE_REVIEW.html  NEXUS_INTERVIEW_QA.html  NEXUS_PROJECT_ANALYSIS.html  NEXUS_VS_LANGGRAPH_ANALYSIS.html  README.md  README_CN.md  build.bat  nexus-deep-analysis.html  nexus_evaluation_report.html  test_opencode.json  test_parallel.json  test_workflow.json
.github/workflows/: ci.yml
.obsidian/: workspace.json
archive/: README.md  REFERENCE.md
archive/issues/: 003-output-size-limits.md  005-exit_reason-returns-validation.md  006-process-timeout-rename.md  007-nodeshell-async-enum.md  008-datarouter-snapshot-semantics.md  010-default-fallback-edge.md  011-exit_reason-stdout-protocol.md  012-retry-vs-selfloop.md
code/review/: 01-critical.md  02-moderate.md  03-low.md  04-optimizations.md  05-doc-code-drift.md  06-doc-fixes-needed.md  07-deep-review.md  08-third-round.md  09-fourth-round.md  10-fifth-round.md  11-sixth-round.md  README.md
design/: ARCHITECTURE.md  DECISIONS.md  NODE_PROTOCOL.md  README.md
design/.obsidian/: workspace.json
design/human-in-the-loop/: ARCHITECTURE.md  AUDIT_REVIEW.md  IMPLEMENTATION.md  OPTIMIZED.md
doc/: DESIGN_PRINCIPLES.md
doc/theory/: DESIGN_PHILOSOPHY.md  NODE_TRANSFER.md
docs/: REFERENCE.md
docs/architecture/: ARCHITECTURE.md  NODE_PROTOCOL.md
docs/decisions/: LANGUAGE.md
docs/design-extras/: NODE_TRANSFER.md
docs/issues/: 001-buildresult-to-graphdef.md  002-edge-state-separation.md  003-output-size-limits.md  004-nodeshell-enum-dispatch.md  005-exit_reason-returns-validation.md  006-process-timeout-rename.md  007-nodeshell-async-enum.md  009-default-retry-threshold.md  012-retry-vs-selfloop.md
docs/philosophy/: DESIGN_PHILOSOPHY.md
docs/review/: ARCHITECTURE_REVIEW.md  DEEP_REVIEW.md
engine/: Cargo.toml  README.md  zig-cc.bat
engine/.cargo/: config.toml
engine/crates/cli/: Cargo.toml
engine/crates/cli/src/: main.rs  status_board.rs
engine/crates/cli/tests/: cli_tests.rs
engine/crates/dashboard/: Cargo.toml
engine/crates/dashboard/src/: db.rs  engine_bridge.rs  lib.rs  main.rs  models.rs  state.rs  static_files.rs  ws.rs
engine/crates/dashboard/src/api/: mod.rs  runs.rs  workflows.rs
engine/crates/dashboard/tests/: api_integration.rs  scenario_chains.rs  ws_integration.rs
engine/crates/engine/: Cargo.toml
engine/crates/engine/src/diagnostics/: event.rs  mod.rs  snapshot.rs
engine/crates/engine/src/graph/: builder.rs  data_router.rs  edge.rs  graph_def.rs  mod.rs  scheduler.rs  validator.rs
engine/crates/engine/src/model/: config.rs  error.rs  mod.rs  predecessor.rs  provider.rs  workflow.rs
engine/crates/engine/src/nodeshell/: http.rs  llm.rs  llm_sdk.rs  mod.rs  subprocess.rs  template.rs  types.rs
engine/crates/engine/src/runtime/: engine.rs
engine/crates/engine/tests/: fuzz_workflow_json.rs
engine/crates/mcp-server/: Cargo.toml
engine/crates/mcp-server/src/: main.rs
engine/crates/mcp-server/tests/: mcp_integration.rs
engine/examples/workflows/: opencode-example.json  parallel-review.json
engine/scripts/: build-all.ps1  hitl_consumer.py  llm_node.py  llm_sdk.py  llm_sdk.py.bak  node_approved.bat  node_ok.bat  node_rejected.bat  package.ps1  read_arch.py  sleep3.bat  start_review.bat  test_tool_bridge.py  write_report.py
manual/: AGENT_GUIDE.md  CLI_REFERENCE.md  QUICKSTART.md  README.md  WORKFLOW_REFERENCE.md
nexus-cli/: Cargo.toml
nexus-cli/src/: main.rs  status_board.rs
nexus-cli/tests/: cli_tests.rs
nexus-engine/: Cargo.toml
nexus-engine/src/: lib.rs
nexus-mcp-server/: Cargo.toml
nexus-mcp-server/src/: main.rs
references/: WORKFLOW_REFERENCE.md
release/: NEXUS_WORKFLOW_SKILL.md  QUICKSTART.md  README.md  WORKFLOW_REFERENCE.md  _test_out.txt  review.md
release/.obsidian/: workspace.json
release/examples/: auto-review-fix-loop.json  branch-routing-e2e.json  claude-review-loop.json  claude-single-node.json  claude-test.json  design-philosophy-review.json  design-review-fix-loop.json  hitl-cli-test.json  hitl-multi-test.json  hitl-test.json  http-test-branch.json  http-test-demo.json  http-test-post.json  http-test.json  llm-opencode-test.json  llm-sdk-review-chain.json  llm-sdk-test.json  llm-test.json  load_http_tests.py  max-duration-test.json  (+1 more)
scripts/: build-all.sh
tests/: e2e_cli_test.ps1  test_wrapper.ps1
theory/: NODE_TRANSFER.md  README.md
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
workflows/: opencode-example.json
(+69 files in other folders)
