[workspace]
members = ["crates/engine", "crates/cli", "crates/mcp-server", "crates/dashboard"]
resolver = "2"

[workspace.dependencies]
petgraph = { version = "0.8", features = ["serde-1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
unwrap_used = "deny"
panic = "deny"
missing_errors_doc = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
