[workspace]
members = ["crates/engine", "crates/mcp-server", "crates/dashboard", "crates/cli"]
resolver = "2"

[workspace.dependencies]
petgraph = { version = "0.8", features = ["serde-1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
unwrap_used = "deny"
panic = "deny"
missing_errors_doc = "deny"
# Style-only lints that are subjectively debatable.  The auto-fixable
# ones were already applied by `cargo clippy --fix`; these remaining
# rules are allowed because the code is clearer as-is.
option_if_let_else = "allow"
map_unwrap_or = "allow"
if_not_else = "allow"
unnecessary_literal_unwrap = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
too_many_lines = "allow"
branches_sharing_code = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
let_underscore_future = "allow"
must_use_candidate = "allow"
type_complexity = "allow"
manual_unwrap_or_default = "allow"
unwrap_in_result = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
manual_clamp = "allow"
or_fun_call = "allow"
double_must_use = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
