[package]
name = "nexus-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-engine = { path = "../engine" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase", "wincon", "handleapi"] }
[dev-dependencies]
tempfile = "3"

[[test]]
name = "cli_tests"
harness = true

[lints]
workspace = true
