[package]
name = "nexus-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-engine = { path = "../engine" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints]
workspace = true
